fix font on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap'); */
 
 @layer base {
   /* html{
@@ -17,6 +17,11 @@
  
 } */
 
+}
+
+@font-face {
+  font-family: 'Luckiest Guy', cursive;
+  src: url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
 }
 
 h1, h2, h3, h4, h5, h6{
